# NLP-RAG-GRP

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  STEPS.md  supabase.md
backend/: .env.example  .env.test  README.md  pyproject.toml  test_rag_core.py
backend/app/: __init__.py  config.py  dependencies.py  errors.py  logging.py  main.py
backend/app/api/: auth.py  business_admin.py  knowledge.py  super_admin.py
backend/app/core/: __init__.py  chunker.py  ingestor.py  llm_router.py  pdf_parser.py  rag_brain.py  scraper.py  searcher.py  text_cleaner.py
backend/app/db/: __init__.py  conninfo.py  supabase_client.py
backend/app/models/: auth.py  business.py  knowledge.py
backend/app/services/: __init__.py  users.py
backend/scripts/: apply_migrations.py
backend/tests/: conftest.py  test_auth_api.py  test_business_admin_api.py  test_config.py  test_db_integration.py  test_dependencies.py  test_health.py  test_knowledge_api.py  test_main.py  test_super_admin_api.py
backend/tests/core/: test_phase5_core.py
frontend/: .env.example  .prettierignore  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/context/: AuthContext.tsx  auth-provider.tsx  auth-state-context.ts  auth-types.ts  use-auth.ts
frontend/src/hooks/: useBusinessBySlug.ts
frontend/src/lib/: api.ts  supabase.ts  utils.ts
frontend/src/pages/: HomePage.tsx
frontend/src/pages/auth/: LoginPage.tsx  SignupPage.tsx
frontend/src/pages/business-admin/: BusinessAdminDashboard.tsx  KnowledgeBasePage.tsx
frontend/src/pages/chat/: ChatPortal.tsx
frontend/src/pages/super-admin/: CreateBusinessPage.tsx  DashboardPage.tsx  SuperAdminDashboard.tsx
frontend/src/types/: super-admin.ts
frontend/tests/: utils.test.ts
supabase/: config.toml
supabase/migrations/: 20260418120001_create_businesses.sql  20260418120002_create_business_members.sql  20260418120003_create_knowledge_chunks.sql  20260418120004_create_conversations.sql  20260418120005_create_chat_messages.sql  20260418120006_create_alerts.sql  20260418120007_create_response_cache.sql  20260418120008_create_user_profiles_and_trigger.sql  20260418120009_enable_rls_policies.sql  20260418120010_create_search_knowledge_function.sql  20260418120011_storage_uploads_bucket.sql  20260418140000_fix_user_profiles_rls_recursion.sql
