[project]
name = "rag-factory-backend"
version = "0.1.0"
description = "Multi-tenant RAG platform backend (FastAPI + Supabase + Azure OpenAI)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RAG Factory" }]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.12",

    # Supabase / Postgres
    "supabase>=2.9.0",
    "postgrest>=0.17.0",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",

    # AI / LLM
    "openai>=1.54.0",
    "tiktoken>=0.8.0",

    # Document processing
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",

    # Text processing
    "langchain-text-splitters>=0.3.0",

    # Web scraping
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",

    # Config / data
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",

    # Auth
    "pyjwt>=2.9.0",

    # Logging
    "structlog>=24.4.0",

    # Rate limiting (used in Phase 8)
    "slowapi>=0.1.9",

    # HTTP
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "migrations", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (common in FastAPI Depends())
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
